--- a/templates/quotes.html
+++ b/templates/quotes.html
@@ -13,7 +13,7 @@
       <form action="/process" method="post">
         <div class="form-group">
           <label for="author">Quote Author</label>
-          <input type="text" id="inputName" name="Author" class="form-control" placeholder="Type your quotes.." required autofocus>
+          <input type="text" id="inputName" name="author" class="form-control" placeholder="Type your quotes.." required autofocus>
         </div>
         <div class="form-group">
           <label for="quote" >Quote</label>
