--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
      </nav>
     <br>
     <div class="container theme-showcase" role="main">
-      <div style="color:#aaa; background-color:yellow", class="jumbotron">
+      <div style="color:#aaa; background-color:brown", class="jumbotron">
         <h1>Favorite Quotes</h1>
       </div>
       <!--for loop starts-->
