--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       </div>
       <!--for loop starts-->
       {% for r in result %}
-      <div style ="color:#fff;background-color:brown">
+      <div style ="color:#aaa;background-color:brown">
         <h1> {{ r.author }} </h1>
       </div>
 
